Fixed screen overflow creating scroll bars

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -14,7 +14,6 @@
 }
 
 body {
-  min-height: 100vh;
   margin: 0;
 
   display: flex;
@@ -47,7 +46,7 @@ a:hover {
 header {
   margin: 0;
   margin-bottom: 2rem;
-  padding: 1rem;
+  padding: 1rem 0;
 
   width: 100%;
 
